--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -116,7 +116,15 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     float: left;
                     height: 100%;
                 }
-                .time_pu{
+                
+            }
+        }
+    }
+    }
+    
+    //模版样式
+    .pubilc_div{
+                   >.time_pu{
                     position: relative;
 
                     .bbsClass{
@@ -235,16 +243,16 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         font-size: 14px;
                         text-align: center;
                         background: #efefef;
-                        position: absolute;
-                        left: 0;
-                        bottom: 0;
-                        width: 100%;
+                        color: #333;
+                        margin-top: 4px;
                     }
                 }
-            }
-        }
-    }
-    }
+                }
+    
+    
+    
+    
+    
     //底部图片框
    .footer_img{
       width: 100%;
