--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -32,7 +32,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     .nav li {cursor: pointer;float: left;padding: 0 46px 0 46px;height: 26px;line-height: 26px;margin-top: 12px;border-left:1px solid #5b5b5b;}
     .nav li a{color:#efefef;font-size: 16px;}
     .nav li:hover >a{color:#5b5b5b;}
-    .nav li a:active{position: relative;top: 1px;} 
+    .nav li a:active{position: relative;top: 1px;}
     .loding{width:120px;height: 50px;line-height: 50px;}
     .loding a{color: #EFEFEF;font-size: 16px}
     .loding a:hover{color: #5b5b5b;}
@@ -64,7 +64,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 }
 .comtent_chanpin{
     width:100%;
-   
+
     background: #efefef;
     .line_comtent{
         border-bottom: 1px solid #D3D3D6;
@@ -98,7 +98,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 padding-right: 100px;
             }
         }
-        
+
         //
         .time_main_left{
             width:100%;
@@ -116,12 +116,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     float: left;
                     height: 100%;
                 }
-                
+
             }
         }
     }
     }
-    
+
     //模版样式
     .pubilc_div{
                    >.time_pu{
@@ -133,7 +133,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                        .div_page{
                            overflow: hidden;
                            position: relative;
-                           
+
                            >img{
                                 position: absolute;
                            }
@@ -141,8 +141,8 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                        >img{
 //                          .pubCenter;
                             position: absolute;
-                        }  
-                     }                 
+                        }
+                     }
                     .template01{
                         width: 128px;
                         height: 128px;
@@ -163,7 +163,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                             width: 100%;
                             height: 88px;
                             background-color: #d2d2d2;
-                           
+
                         }
                         .div_page:first-child{
                             margin-bottom: 4px;
@@ -197,31 +197,31 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     }
                     .template07{
                         width: 134px;
-                        height: 132px; 
-                        overflow: hidden; 
+                        height: 132px;
+                        overflow: hidden;
                         margin: 34px auto 30px;
                         .div_page{
                             width: 64px;
                             height: 64px;
                             float: left;
                             background-color: #d2d2d2;
-                            margin-bottom: 4px;                           
-                        } 
+                            margin-bottom: 4px;
+                        }
                         .div_page:nth-child(2n+2){
                             float: right;
-                        }  
-                                          
+                        }
+
                     }
                     .template08{
                         width: 104px;
                         height: 150px;
                          overflow: hidden;
-                          margin: 20px auto 26px; 
+                          margin: 20px auto 26px;
                          .div_page{
                              width: 48px;
                              height: 72px;
-                             float: left; background-color: #d2d2d2; 
-                             margin-bottom: 4px;                          
+                             float: left; background-color: #d2d2d2;
+                             margin-bottom: 4px;
                          }
                          .div_page:nth-child(2n+2){
                             float: right;
@@ -248,11 +248,11 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     }
                 }
                 }
-    
-    
-    
-    
-    
+
+
+
+
+
     //底部图片框
    .footer_img{
       width: 100%;
@@ -261,14 +261,14 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
       background: #fff;
       position: relative;
       bottom: 0;
-      left: 0; 
+      left: 0;
       .footer_up_tittle{
           width: 100%;
           height: 50px;
           line-height: 50px;
           border-bottom: 1px solid #d2d2d2;
           font-size: 14px;
-          
+
           color: #6b6b6b;
               .footer_btn{
                 height: 30px;
@@ -296,12 +296,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
           .footer_right{
               text-indent: 5%;
           }
-          
-     
+
+
       }
       .fonter_box_img{
         width: 100%;
-        height: 116px; 
+        height: 116px;
         overflow-x: auto;
         display: none;
         >ul{
@@ -316,11 +316,11 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 cursor:pointer;
                 float: left;
                 >img{
-                   .pubCenter; 
+                   .pubCenter;
                 }
             }
-        }  
-      }     
+        }
+      }
    }
 }
 
@@ -431,14 +431,14 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     color: #333;
                 }
                 .color_span{
-                    color: #a00912;                    
+                    color: #a00912;
                 }
                 .close{
                     width: 54px;
                     height: 30px;
                     position: absolute;
                     right: 0;
-                    top: 0;color: #333;                   
+                    top: 0;color: #333;
                     cursor: pointer;
                     >i{
                         position: relative;
@@ -452,7 +452,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     font-size: 26px;
                     color: #333;
                     top: -2px;
-                   
+
                 }
                 .closes:hover{
                     color: #ccc;
@@ -468,7 +468,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 border-top: 1px solid #ddd;
                 height: 60px;
                 position: absolute;
-                bottom: 0;left: 8%; 
+                bottom: 0;left: 8%;
                 overflow: hidden;
                 >div{
                     width: 50%;
@@ -492,7 +492,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                              color: #000;
                           }
                            >span{
-                              color: #000; 
+                              color: #000;
                            }
                      }
                      >div:active{
@@ -507,7 +507,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         display: block;
                         }
                         >span{
-                            
+
                         }
                     }
                 }
@@ -554,7 +554,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 }
             }
         }
-  }  
+  }
 }
 
 //冲突的element样式
@@ -563,4 +563,27 @@ body .el-loading-spinner .path{
 }
 body .el-loading-spinner .el-loading-text{
     color: #333;
+}
+.shield{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background: rgba(0,0,0,.55);
+}
+.preview_wrapper{
+  position: fixed;
+  top: 90px;
+  left: 50%;
+  width: 930px;
+  height: 540px;
+  margin-left: -465px;
+  z-index: 200;
+  background: #fff;
+  border-radius: 4px;
+  .preview_comtent{
+
+  }
 }
