--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -245,6 +245,23 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         background: #efefef;
                         color: #333;
                         margin-top: 4px;
+                        >div{
+                            width: 50%;
+                            float: left;
+                            font-size: 13px;
+                        }
+                        .pageleft{
+                            
+                        }
+                        .pageRight{
+                            cursor: pointer;
+                        }
+                        .pageRight:hover{
+                            opacity: .8;
+                        }
+                        .pageRight:active{
+                            position: relative;top: 1px;
+                        }
                     }
                 }
                 }
