--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -133,8 +133,9 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                        .div_page{
                            overflow: hidden;
                            position: relative;
-
+//                         z-index: 9; 
                            >img{
+
                                 position: absolute;
                            }
                        }
