--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -130,12 +130,20 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                     .bbsClass{
                        overflow: hidden;
                        position: relative;
+                       .drap_img{
+                           position: absolute;
+                           left: 0;
+                           top: 0;
+                           width: 100%;
+                           height: 100%;
+                           z-index: 2;
+                       }
                        .div_page{
                            overflow: hidden;
                            position: relative;
 //                         z-index: 9; 
                            >img{
-
+                                z-index: 1;
                                 position: absolute;
                            }
                        }
@@ -345,6 +353,8 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 
 //全局的模态框
 #model{
+        position: relative;
+         z-index: 999;
         .el-button{
              padding: 8px 15px;
          }
@@ -366,6 +376,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     top: 0;left: 0;
   .model{
       position: relative;
+      z-index: 9;
       width: 100%;
       height: 100%;
       background: rgba(0,0,0,0.5);
