个人中心左侧菜单

--- a/static/font/iconfont.css
+++ b/static/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1500450460149'); /* IE9*/
-  src: url('iconfont.eot?t=1500450460149#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1500450460149') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1500450460149') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1500450460149#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1501568025598'); /* IE9*/
+  src: url('iconfont.eot?t=1501568025598#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1501568025598') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1501568025598') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1501568025598#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,15 +15,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-account:before { content: "\e6b8"; }
+
+.icon-discount:before { content: "\e6c5"; }
+
 .icon-weibiaoti1:before { content: "\e60b"; }
 
 .icon-sysmeg:before { content: "\e643"; }
+
+.icon-manageorder:before { content: "\e723"; }
 
 .icon-chexiao:before { content: "\e601"; }
 
 .icon-youxuanzhuan90du:before { content: "\e60e"; }
 
 .icon-zuoxuanzhuan90du:before { content: "\e60f"; }
+
+.icon-bussinesscard:before { content: "\e753"; }
 
 .icon-gouwuche:before { content: "\e6c7"; }
 
