--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -824,3 +824,430 @@ body .el-loading-spinner .el-loading-text{
        margin: 0 auto;
     }
 }
+//购物车
+#cart{
+    .positionFixed100 {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      right: 0;
+    }
+    .positionAuto {
+      position: absolute;
+      margin: auto auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+    .box-sizing-border {
+      box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+    }
+    .p_contenter {
+      width: 1200px;
+      display: block;
+      margin: 0 auto;
+    }
+    .p_cat {
+      line-height: 60px;
+      padding-bottom: 100px;
+    }
+    .cart_null img{
+        text-align: center;
+        display: block;
+        margin: 148px auto 56px;
+    }
+    .cart_null .gpWorks{
+        line-height: 34px;
+        font-size: 20px;
+        color: #414040;
+        display: table;
+        margin: 0 auto;
+        margin-bottom: 120px;
+    }
+    .cart_null .goIndex{
+        padding: 0 54px;
+        font-size: 17px;
+        color: #000;
+        border: 1px solid #000;
+        line-height: 34px;
+        height: 34px;
+        display: block;
+        width: 70px;
+        border-radius: 5px;
+        margin: 0 auto;
+        margin-bottom: 300px;
+    }
+    .cart_null .gpWorks:hover{
+        text-decoration: underline;
+    }
+    .cart_null .goIndex:hover{
+        color: #fff;
+        background: #444;
+        
+    }
+    .cart_null .goIndex:active{
+        position: relative;
+        top: 1px;
+        
+    }
+    .p_cat > .pay_cat {
+      width: 1116px;
+      margin: 0 auto;
+      height: 106px;
+    }
+    .p_cat > .pay_cat > li {
+      float: left;
+      font-size: 16px;
+      line-height: 106px;
+      height: 106px;
+    }
+    .p_cat > .pay_cat .cat_pay01 {
+      width: 71px;
+    }
+    .p_cat > .pay_cat .cat_pay01 p {
+      font-size: 16px;
+    }
+    .p_cat > .pay_cat .cat_pay01 p b {
+      width: 26px;
+      height: 26px;
+      display: block;
+      position: relative;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      display: inline-block;
+      vertical-align: middle;
+      border: 1px solid #a8a8a8;
+      margin-right: 6px;
+    }
+    .p_cat > .pay_cat .cat_pay01 p b > i {
+      width: 14px;
+      height: 14px;
+      position: absolute;
+      margin: auto auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: #a00912;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+    }
+    .p_cat > .pay_cat .cat_pay02 {
+      width: 394px;
+      text-indent: 16px;
+      cursor: pointer;
+    }
+    .p_cat > .pay_cat .cat_pay03 {
+      width: 646px;
+    }
+    .p_cat > .pay_cat .cat_pay03 > a {
+      display: block;
+      width: 148px;
+      height: 44px;
+      line-height: 44px;
+      text-align: center;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      border: 1px solid #333;
+      float: right;
+      word-spacing: 8px;
+      letter-spacing: 3px;
+      color: #000;
+      margin-top: 30px;
+      outline: none;
+    }
+    .p_cat > .pay_cat .cat_pay03 > a:hover {
+      background: #a00912;
+      border: 1px solid #a00912;
+      color: #fff;
+      transition: all 1s;
+    }
+    .p_cat > .pay_cat .cat_pay03 > a:active {
+      position: relative;
+      top: 1px;
+    }
+    .p_cat > dl > dt {
+      height: 60px;
+      background: #eeeeee;
+    }
+    .p_cat > dl > dt .tab02 {
+      text-indent: 16px;
+    }
+    .p_cat > dl > dt .tab04 {
+      text-indent: 30px;
+    }
+    .p_cat > dl > dd {
+      height: 124px;
+    }
+    .p_cat > dl > dd .cat_hander {
+      height: 124px;
+    }
+    .p_cat > dl > dd .cat_hander > div {
+      height: 124px;
+      border-bottom: 1px solid #dcdcdc;
+    }
+    .p_cat > dl > dd .cat_hander .tab01 {
+      border: none;
+    }
+    .p_cat > dl > dd .cat_hander .tab01 > p {
+      margin-top: 30px;
+    }
+    .p_cat > dl .cat_hander {
+      width: 1116px;
+      height: 60px;
+      line-height: 60px;
+      margin: 0 auto;
+    }
+    .p_cat > dl .cat_hander div {
+      height: 60px;
+      float: left;
+      font-size: 16px;
+    }
+    .p_cat > dl .cat_hander .tab01 {
+      width: 71px;
+    }
+    .p_cat > dl .cat_hander .tab01 p {
+      font-size: 16px;
+    }
+    .p_cat > dl .cat_hander .tab01 p b {
+      width: 26px;
+      height: 26px;
+      display: block;
+      position: relative;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      display: inline-block;
+      vertical-align: middle;
+      border: 1px solid #a8a8a8;
+      margin-right: 6px;
+    }
+    .p_cat > dl .cat_hander .tab01 p b > i {
+      width: 14px;
+      height: 14px;
+      position: absolute;
+      margin: auto auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: #a00912;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+    }
+    .p_cat > dl .cat_hander .tab02 {
+      width: 530px;
+    }
+    .p_cat > dl .cat_hander .tab02 .img_cat {
+      width: 123px;
+      height: 113px;
+      position: relative;
+      padding: 0 11px;
+      margin-top: 5px;
+    }
+    .p_cat > dl .cat_hander .tab02 .img_cat > img {
+      max-width: 100%;
+      max-height: 100%;
+      position: absolute;
+      margin: auto auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+    .p_cat > dl .cat_hander .tab02 .cp_msg {
+      width: 365px;
+      height: 86px;
+      float: right;
+      margin-top: 18px;
+      line-height: 43px;
+      height: 43px;
+    }
+    .p_cat > dl .cat_hander .tab02 .cp_msg > span {
+      display: block;
+      font-size: 19px;
+    }
+    .p_cat > dl .cat_hander .tab02 .cp_msg > p {
+      font-size: 14px;
+      color: #666666;
+    }
+    .p_cat > dl .cat_hander .tab03 {
+      width: 160px;
+    }
+    .p_cat > dl .cat_hander .tab03 > p {
+      line-height: 124px;
+      font-size: 22px;
+      color: #666666;
+    }
+    .p_cat > dl .cat_hander .tab03 > p > i {
+      font-size: 15px;
+    }
+    .p_cat > dl .cat_hander .tab03 > p > b {
+      font-size: 17px;
+    }
+    .p_cat > dl .cat_hander .tab04 {
+      width: 160px;
+    }
+    .p_cat > dl .cat_hander .tab04 .cat_num {
+      width: 100px;
+      height: 28px;
+      margin-top: 48px;
+      position: relative;
+    }
+    .p_cat > dl .cat_hander .tab04 .cat_num > a {
+      width: 26px;
+      height: 26px;
+      display: block;
+      border: 1px solid #ccc;
+      overflow: hidden;
+      float: left;
+      line-height: 30px;
+      text-align: center;
+      font-size: 24px;
+      color: #6d6d6d;
+    }
+    .p_cat > dl .cat_hander .tab04 .cat_num > a:hover {
+      background: #a00912;
+      border: 1px solid #a00912;
+      color: #fff;
+      transition: all 0.5s;
+    }
+    .p_cat > dl .cat_hander .tab04 .cat_num .cat_num_last {
+      font-size: 34px;
+      line-height: 24px;
+    }
+    .p_cat > dl .cat_hander .tab04 .cat_num > b {
+      width: 42px;
+      height: 28px;
+      line-height: 28px;
+      display: block;
+      float: left;
+      text-align: center;
+    }
+    .p_cat > dl .cat_hander .tab05 {
+      width: 132px;
+    }
+    .p_cat > dl .cat_hander .tab05 > p {
+      line-height: 124px;
+      font-size: 22px;
+      color: #666666;
+    }
+    .p_cat > dl .cat_hander .tab05 > p > i {
+      font-size: 15px;
+    }
+    .p_cat > dl .cat_hander .tab05 > p > b {
+      font-size: 17px;
+    }
+    .p_cat > dl .cat_hander .tab06 {
+      width: 60px;
+      position: relative;
+      text-align: center;
+    }
+    .p_cat > dl .cat_hander .tab06 > b {
+      width: 25px;
+      height: 27px;
+      display: block;
+      background: url(../img/p_cat_icon01.png) no-repeat;
+      position: absolute;
+      margin: auto auto;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      cursor: pointer;
+    }
+
+}
+#confimOrder{
+    .order1{width: 1200px;min-height:220px;padding-top:42px;overflow: hidden;}
+    .ord1-tit{font-size: 16px;height: 36px;line-height: 36px;}
+    .ord1m{min-height: 160px;padding:0 23px 23px 23px ;width: 850px;}
+    .ord1m2{width: 277px;height: 165px;padding-top: 23px;padding-right: 23px;}
+    .rod001{width: 1200px;min-height: 188px;overflow: hidden;border:1px solid #c9c9c9;box-sizing: border-box;}
+    .xuanze{display:block;height: 15px;width: 15px;border:1px solid #C9C9C9;margin-right: 20px;margin-top:2px;position: relative;}
+    .xz01{display: block;height: 7px;width: 7px;border-radius: 4px;background:#A00912;top: 4px;left: 4px;position: absolute;}
+    .ord1m_1{font-size: 16px;margin-top: 28px;height: 30px;}
+    .ord1m_1 p{font-size: 16px}
+    .ord1m_1 span{margin-right: 50px;}
+    .ord1m-btm{height: 30px;width: 120px;color: white;background: #A00912;border:none;border-radius: 4px;}
+    .ord1m_2{font-size: 16px;margin-top: 20px;color: #999;height: 24px;}
+    .ord1m_2 span{display: block;float: left;}
+    .ord1m_3{font-size: 16px;margin-top: 20px;}
+    .ord1m_3 select{height: 36px;width: 125px;border:1px solid #999;color: #A00912;font-size: 16px;outline: none;border-radius: 4px;padding-left: 20px;font-weight: 900;}
+    
+    /*ssssssssssssssssssss*/
+    .order2{width: 1200px;clear: both;}
+    .ord2-tit{height: 48px;line-height: 48px;font-size: 16px;margin-top: 25px;border-bottom: 1px solid #999;}
+    .ord2-nav{height: 63px;padding-left: 30px;padding-right: 50px;line-height: 50px;font-size: 16px;}
+    .ord2-nav .r{margin-left: 98px;}
+    .ord2-main{min-height: 90px;background:#f6f6f6;padding-bottom: 10px;}
+    .or2m-t{height: 125px;width: 1155px;border-bottom:1px solid #e2e2e2;}
+    .or2m-t-l{height: 98px;width: 360px;padding-top: 28px;}
+    .or2m-t-l >.img{width: 119px;height: 78px;display: block;position: relative;/*border:1px solid #c9c9c9;*/}
+    .or2m-t-l >.img >img{position: absolute;margin: auto auto;top: 0;left: 0;right: 0;bottom: 0;max-height: 100%;max-width: 100%;}
+    .or2m-t-l div{height: 80px;width: 200px;margin-left: 18px;}
+    .or2m-t-l .p1{font-size: 16px;margin-top: 20px;}
+    .or2m-t-l .p2{font-size: 14px;margin-top: 20px;}
+    .or2m-t-1{width: 170px;height: 30px;font-size: 16px;margin-top: 80px;margin-left: 100px;}
+    .or2m-t-2{margin-right:74px;margin-top: 76px;}
+    .or2m-t-2 .s1{font-size:14px;}
+    .or2m-t-2 .s2{font-size:20px;}
+    .redd{color:#A00912;margin-right: 0;}
+    .ritdh{margin-left:200px;}
+    .or2m-b{height: 174px;width: 1155px;}
+    .or2m-b-tit{font-size: 16px;margin-top: 13px;margin-bottom: 13px;}
+    .or2bm{height: 98px;}
+    .voucher{width: 270px;height:94px;background: url(../img/fan_djq_03.jpg) no-repeat left top;border-radius: 4px;margin-right: 24px;}
+    .voucher-l{height: 94px;width: 83px;font-size: 14px}
+    .voucher-r{height: 92px;width: 186px;border:1px solid #ff9e01;border-left:none;background: white;border-radius: 0 4px  4px 0;}
+    .huibor{border:1px solid #e5e5e5;border-left:none;border-radius: 0 4px  4px 0;}
+    .voucher-l .s1{font-size: 20px;color:white;}
+    .voucher-l .s2{font-size: 14px;color:white;}
+    .voucher-l p{text-align: center;}
+    .voucher-l .p2{margin-top: 20px;}
+    .voucher-l .p1{margin-top: 8px;color: #fdcc7d;}
+    .vr1{margin-left: 23px;margin-top: 13px;font-weight: 900;font-size: 14px}
+    .vr2{margin-left: 23px;font-size: 12px;margin-top: 3px;}
+    .vr3{margin-left: 23px;font-size: 12px;margin-top: 3px;}
+    .vr3 span{color: #ff9e01;}
+    .vr4{height: 22px;font-size: 12px;color: #bdbdbd;border-top: 1px dashed #eaeaea;margin-top: 3px;text-align: right;}
+    .notes{height: 90px;width: 1155px;margin-top:30px;}
+    .note-top{height: 50px;}
+    .ntl{height: 30px;width:420px;font-size: 16px;font-weight: 900px;margin-top: 30px;}
+    .ntl span{font-size: 14px;color: #A00912;}
+    .ntr{height: 30px;width:400px;margin-top: 25px;}
+    .ntrtxt{width: 278px;height:28px;text-align: center;}
+    .ntrbtn{width: 90px;height:30px;border: none;background: #A00912;color: white;font-size: 14px;border-radius: 4px;margin-left: 15px;}
+    .nthbz{display: block;width: 1113px;height: 39px;padding: 0 20px;font-size: 14px}
+    .bill{width: 1155px;height: 38px;border-bottom: 1px solid #d2d2d2;font-size: 16px;color: #3b3a3a;margin-top: 40px;line-height: 38px;}
+    .billl{display: inline-block;}
+    .billr span{margin-left: 60px;font-size: 16px}
+    .billr a{color: #A00912;margin-left: 60px;font-size: 16px}
+    .pay{height: 30px;width: 1155px;margin-top: 30px;font-weight: 900;border-bottom: 1px solid #d2d2d2;height: 150px;margin-bottom: 30px;}
+    .pay-tit{height: 30px;width: 1155px;line-height: 30px;border-bottom: 1px solid #d2d2d2;font-size: 16px;}
+    .pay-cont{height: 120px;}
+    .pay-cont a{display: block;height: 120px;width: 85px;font-size: 16px;color: #3A3A3A;text-align: center;line-height: 170px;margin-right: 40px;font-weight: 100;}
+    .pay-cont .a1{background: url(../img/fan-zhufu_07.jpg) no-repeat 22px 24px;}
+    .pay-cont .a2{background: url(../img/fan-zhufu_09.jpg) no-repeat 22px 24px;}
+    .detail{width: 1155px;height: 50px;}
+    .dtl01 p{font-size: 16px;margin-left: 68px; text-align: right;}
+    .bul{color:#00aaef;}
+    .money{font-size: 16px;}
+    .money span{color: #A00912;font-size: 26px;}
+    .btnaa .btna1{display: inline-block;padding-left:40px;height: 30px;line-height: 30px;background:url(../img/jsggc_14.jpg) no-repeat 0 0;font-size: 16px;font-family: 16px;color: #A00912;}
+    .btnaa .btnbtn{cursor: pointer;width: 150px;height: 30px;border: none;color: white;background: #A00912;border-radius: 4%;margin-left: 46px;font-size: 14px}
+    .btnaa .btnbtn:hover{background: #CC0000;}
+    .btnaa .btnbtn:active{position: relative;top: 1px;}
+    .defd p{margin-left: 38px;color: #555;}
+    .defd p span{margin-right: 5px;font-size: 15px}
+    .mt2{margin-top: 40px;}
+
+}
