--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -854,6 +854,7 @@ body .el-loading-spinner .el-loading-text{
     .p_cat {
       line-height: 60px;
       padding-bottom: 100px;
+      min-height: 960px;
     }
     .cart_null img{
         text-align: center;
@@ -1190,13 +1191,13 @@ body .el-loading-spinner .el-loading-text{
     .ord2-nav .r{margin-left: 98px;}
     .ord2-main{min-height: 90px;background:#f6f6f6;padding-bottom: 10px;}
     .or2m-t{height: 125px;width: 1155px;border-bottom:1px solid #e2e2e2;}
-    .or2m-t-l{height: 98px;width: 360px;padding-top: 28px;}
+    .or2m-t-l{height: 98px;width: 420px;padding-top: 28px;}
     .or2m-t-l >.img{width: 119px;height: 78px;display: block;position: relative;/*border:1px solid #c9c9c9;*/}
     .or2m-t-l >.img >img{position: absolute;margin: auto auto;top: 0;left: 0;right: 0;bottom: 0;max-height: 100%;max-width: 100%;}
-    .or2m-t-l div{height: 80px;width: 200px;margin-left: 18px;}
+    .or2m-t-l div{height: 80px;width: 260px;margin-left: 18px;}
     .or2m-t-l .p1{font-size: 16px;margin-top: 20px;}
     .or2m-t-l .p2{font-size: 14px;margin-top: 20px;}
-    .or2m-t-1{width: 170px;height: 30px;font-size: 16px;margin-top: 80px;margin-left: 100px;}
+    .or2m-t-1{width: 100px;height: 30px;font-size: 16px;margin-top: 80px;margin-left: 100px;}
     .or2m-t-2{margin-right:74px;margin-top: 76px;}
     .or2m-t-2 .s1{font-size:14px;}
     .or2m-t-2 .s2{font-size:20px;}
