--- a/src/assets/less/复制 style.less
+++ b/src/assets/less/复制 style.less
@@ -203,9 +203,9 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 margin:   0px 8px 10px 8px;
                 overflow: hidden;
                 >div{
-                    width: 50%;
-                    float: left;
-                    height: 100%;
+//                  width: 50%;
+//                  float: left;
+//                  height: 100%;
                 }
 
             }
@@ -215,41 +215,37 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 
     //模版样式
     .active_line{border: 1px solid #a00912 !important;height: 242px !important;overflow: hidden;}
-    
-        .hengban_bbs{
-        width: 100% !important;
-        height: 100%;
-        >.time_pu{
-            width: 100% !important;
-            height: 100% !important;
-            .pageleft{
-                text-align: left !important;
-                text-indent: 28px; 
-             }
-            .hengbanText{
-               margin-left: 20px !important;
-             }
-            .bbs_hengban{
-                width: 280px;
-                height:160px;
-                margin: 18px auto 18px;
-                .div_page{
-                    width:100%;position: relative;height: 100%;
-                    background-color: #d2d2d2 ;
-                    
-                }
-                
-            }
-            
-        }
-    }
-    
+//  .hengban_bbs{
+//      width: 100%;
+//      height: 100%;
+//      >.time_pu{
+//          width: 100% !important;
+//          height: 100% !important;
+//          .hengbanText{
+//             margin-left: 20px !important;
+//           }
+//          .bbs_hengban{
+//              width: 280px;
+//              height:160px;
+//              margin: 15px auto 15px;
+//              .div_page{
+//                  width:100%;position: relative;height: 100%;
+//                  background-color: #d2d2d2 ;
+//                  
+//              }
+//          }
+//          
+//      }
+//  }
     .pubilc_div{
 //          transition: all 1.3s;
             box-sizing: border-box;
 //          border: 1px solid #fff;
                    >.time_pu{
                     position: relative;
+                    width: 50%;
+                    float: left;
+                    height: 100%;
                     .bbsClass{
                        overflow: hidden;
                        position: relative;
