--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1252,3 +1252,95 @@ body .el-loading-spinner .el-loading-text{
     .mt2{margin-top: 40px;}
 
 }
+#orderList{
+    .container{
+        .wrapper{
+            .lineR{width: 960px;border-radius: 5px;background: #fff;margin-bottom: 100px;}
+            .lineR .linetit{height: 55px;font-size: 16px;width: 898px;color: #303030;line-height: 55px;}
+            .lineRs{
+                width: 960px;height: 56px; margin-right: 20px;margin-top: 14px;
+            }
+            body .lineR2{
+                margin-top: 0;
+            }
+            .lineRs ul{   
+                height: 55px;
+                font-size: 16px;
+                width: 898px;
+                color: #303030;
+                line-height: 55px;
+                margin: 0 auto;
+            }
+            .lineRs ul >li{cursor:pointer;float: left;line-height: 56px;font-size: 16px;width: 70px;text-align: center;margin-right: 30px;position: relative;}
+            .lineRs ul >li:hover{
+                color:#969696;
+            }
+            .lineRs ul >li:active{
+                position:relative;
+                top:1px;
+            }
+            .lineRs ul >li >b{
+                position: absolute;
+                top: 12px;
+                z-index: 8;font-size: 12px;right: -6px;display: block;position: absolute;width: 16px;height: 16px;border-radius: 50%;background: #c50b16;color: #fff;line-height: 16px;text-align: center;
+            }
+            .lineRs ul >li >i{
+                position: absolute;
+                height: 2px;
+                width: 100%;
+                bottom:12px;
+                left: 0;
+                display: block;
+            }
+            .main{
+              .linetit p span{text-align: center;display: inline-block;font-size: 16px;}
+                .lets1{width: 130px;}
+                .lets2{width: 143px;}
+                .lets3{width: 115px;}
+                .lets4{width: 109px;}
+                .lineliet{width: 898px;min-height: 160px;border:1px solid #dcdcdc;overflow: hidden;margin-bottom: 14px;}
+                .linetop{height: 39px;background: #eee;width:898px;line-height: 39px;}
+                .lines1{margin-left: 20px;color:#999;margin-right: 30px;}
+                .linecont{min-height: 123px;overflow: hidden;}
+                .lect1{min-height:123px;overflow: hidden;width: 397px;}
+                .lect0{height: 123px;border-left: 1px solid #dcdcdc;font-size:16px;text-align: center;}
+                .lectm_img{height: 80px;width: 120px;margin-left: 20px;position: relative;}
+                .lectm_ct{width: 210px;height: 80px;margin-left: 20px;padding-right: 20px;}
+                .lectm_img >img{position: absolute;left: 0;top: 0;bottom: 0;right: 0;margin: auto auto;max-height: 100%;max-width: 100%;}
+                .lect_top{font-size: 16px;font-weight: 900;}
+                .lectmain{margin-top: 20px;height: 80px;padding-bottom: 20px;}
+                .lect_cer{font-size: 14px;color: #6F6F6F;margin-top: 12px;}
+                .shr{font-size: 16px;font-weight: 900;line-height: 80px;}
+                .jine{line-height: 25px;}
+                
+                .mt1{margin-top: 15px;}
+                .jine01{font-size: 16px;color:#000 ;}
+                .jine02{font-size: 14px;color: #a00912;}
+                .jine03{font-size: 16px;color: #999999;}
+                .jine04{font-size: 14px;color: #999999;}
+                .lect0 >p >a {
+                    color: #888;
+                }
+                .fkzt{font-size: 14px;line-height: 25px;}
+                .ddfk{color: #A00912;}
+                .ywc{color:#999;}
+                .csctbtn1{height: 21px;width: 80px;color: white;background: #A00912;border-radius: 4px;border: none;cursor:pointer;}
+                .csctbtn1:hover{background:#8a0b13;}
+                .csctbtn1:active{position:relative;top:1px;background: #A00912;}
+                .csctbtn2{height: 21px;width: 80px;color: #3a3a3a;background:white;border-radius: 4px;border: none;}
+                .csctbtn3{height: 21px;width: 80px;color: #3a3a3a;background:white;border-radius: 4px;border: none;}
+                .csctbtn2:hover{text-decoration: underline;cursor: pointer;opacity: 0.8;}
+                .order_null{
+                    line-height:50px;
+                    height:50px;
+                    text-align:center;
+                    display:block;
+                    color:#afafaf;
+                    font-size:16px;
+                }
+            }
+         }
+            
+     }
+    
+}
