--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1434,3 +1434,181 @@ body .el-loading-spinner .el-loading-text{
      }
     
 }
+#htm{
+    #payOrder{
+        width: 100%;
+        height: 100%;
+        .top{
+            line-height: 160px;
+            text-align: center;
+            font-size: 28px;
+            height: 160px;
+            border-bottom: 1px solid #D2D2D2;
+            >span{
+               color: #A00912;
+            }
+        }
+        .content{
+            width: 1200px;
+            height: 800px;
+            margin: 80px auto;
+            .price{
+                width: 500px;
+                height: 314px;
+                margin: 0 auto;
+                background: url('http://test.artup.com/img/10phone_03.jpg') no-repeat right top;
+            }
+            .ewm{
+                height: 312px;
+                width: 258px;
+                border-radius: 4px;
+                border: 1px solid #d2d2d2;
+                text-align: center;
+                position: relative;
+                .tit{
+                    height: 60px;
+                    line-height: 60px;
+                    text-align: center;
+                    font-size: 24px;
+    
+                }
+                .tm{
+                    bottom: 15px;
+                    font-size: 16px;
+                    position: absolute;
+                    width: 100%;
+                    text-align: center;
+                     >span{
+                       color: #A00912;
+                    }
+                    
+                }
+            }
+        }
+    }
+    #payCancel{
+        width: 100%;
+        height: 600px;
+        
+       .topBox{
+           width: 100%;
+           min-height: 380px;
+           border-bottom: 1px solid #D2D2D2;
+           
+           .msg{
+               width: 1200px;
+               height: 100%;
+               margin: 0 auto;
+               overflow: hidden;
+               .leftBox{
+                   width: 200px;
+                   height: 180px;
+                   margin-top: 130px;
+                   margin-left: 280px;
+                   position: relative;
+                   float: left;
+                   >i{
+                       width: 90px;
+                       height: 90px;
+                       display: block;
+                       font-size: 66px;
+                       text-align: center;
+                       position: absolute;
+                       margin: auto auto;
+                       left: 0;
+                       right: 0;
+                       bottom: 0;
+                       top: 0;
+                   }
+               }
+               .rightBox{
+                   width: 550px;
+                   height: 180px;
+                   margin-right: 160px;
+                   float: left;
+                   margin-top:130px;
+                   font-size: 16px;
+                   >ul >li{
+                       height: 50px;
+                       line-height: 50px;
+                       >span{
+                            color: #A00912;
+                       }
+                   }
+                   li:nth-child(1){
+                      font-size: 20px;
+                    }
+                    li:nth-child(2){
+                      color: #3a3a3a;
+                    }
+                       
+               }
+           }
+       }
+       .payOk{
+            border-bottom: none !important;
+        }
+       .payOkBtn{
+           width: 330px;
+           height: 36px;
+           position: absolute;
+           margin: auto auto;
+           left: 0;
+           right: 0;
+           >ul >li{
+               width: 120px;
+               height: 36px;
+               float: left;
+               line-height: 36px;
+               text-align: center;
+               margin-left: 28px;
+               background-color: #a00912;
+               border-radius: 4px;
+               color: #fff;
+               cursor: pointer;
+           }
+       }
+       .bottomBox{
+           height: 590px;
+           width: 1200px;
+           margin: 0 auto;
+           position: relative;
+           .orderMsg{
+               width: 900px;
+               min-height: 200px;
+               margin-top: 40px;
+               >ul >li{
+                   height: 40px;
+                   line-height: 40px;
+                   font-size: 16px;
+                   color: #999999;
+               }
+               li:first-child{
+                   font-size: 20px;
+               }
+           }
+           
+           .btnBox{
+               width: 330px;
+               height: 36px;
+               position: absolute;
+               bottom: 170px;
+               margin: auto auto;
+               left: 0;
+               right: 0;
+               >ul >li{
+                   width: 120px;
+                   height: 36px;
+                   float: left;
+                   line-height: 36px;
+                   text-align: center;
+                   margin-left: 36px;
+                   background-color: #a00912;
+                   border-radius: 4px;
+                   color: #fff;
+                   cursor: pointer;
+               }
+           }
+       }
+    }
+}
