--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -429,9 +429,18 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 position: relative;
                 outline: none;
                 margin: 0 5px;
-                 font-size: 14px;  color: #6b6b6b;
-                   cursor: pointer;
-                   box-sizing: border-box;
+                font-size: 14px;  color: #6b6b6b;
+                cursor: pointer;
+                box-sizing: border-box;
+                transition:all .7s; 
+                &:hover{
+                   border: 1px solid #a00912;
+                   color: #a00912; 
+                }
+                 &:active{
+                     position: relative;
+                     top: 1px;
+                 }
               }
               span{text-align: center;display: block;cursor: pointer;}
           >div{
@@ -457,16 +466,20 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
              width: 100%;
              height: 100%;
             >li{
-                width: 116px;
-                height: 116px;
+                width: 100px;
+                height: 100px;
                 position: relative;
-                margin: 0 10px;
-//              padding: 5px 0;
+                margin: 8px;
+                border: 2px #fff;
+                box-sizing: border-box;
                 cursor:pointer;
                 float: left;
                 >img{
                    .pubCenter;
                 }
+            }
+            .img_size_border {
+                border: 2px solid #a00912 !important;
             }
         }
       }
