--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1325,9 +1325,40 @@ body .el-loading-spinner .el-loading-text{
     .pay{height: 30px;width: 1155px;margin-top: 30px;font-weight: 900;border-bottom: 1px solid #d2d2d2;height: 150px;margin-bottom: 30px;}
     .pay-tit{height: 30px;width: 1155px;line-height: 30px;border-bottom: 1px solid #d2d2d2;font-size: 16px;}
     .pay-cont{height: 120px;}
-    .pay-cont a{display: block;height: 120px;width: 85px;font-size: 16px;color: #3A3A3A;text-align: center;line-height: 170px;margin-right: 40px;font-weight: 100;}
-    .pay-cont .a1{background: url(../img/fan-zhufu_07.jpg) no-repeat 22px 24px;}
-    .pay-cont .a2{background: url(../img/fan-zhufu_09.jpg) no-repeat 22px 24px;}
+    .pay-cont a {
+        border-radius: 5px;
+        display: block;
+        height: 100px;
+        width: 85px;
+        font-size: 16px;
+        color: #3A3A3A;
+        text-align: center;
+        line-height: 150px;
+        margin-right: 40px;
+        font-weight: 100;
+        margin-top: 10px;
+    }
+    .pay-cont .a1 >div {
+        background: url(../img/fan-zhufu_07.png) no-repeat;
+        width: 40px;
+        height: 40px;
+        background-size: 100%;
+        margin: 20px auto 0;
+    }
+    .pay-cont .a2 >div {
+        background: url(../img/fan-zhufu_09.png) no-repeat;
+        width: 40px;
+        height: 40px;
+        background-size: 100%;
+        margin: 20px auto 0;
+    }
+    .pay-cont a >p {
+        height: 26px;
+        line-height: 32px;
+        font-size: 14px;
+        font-weight: 400;
+        color: #3b3a3a;
+    }
     .detail{width: 1155px;height: 50px;}
     .dtl01 p{font-size: 16px;margin-left: 68px; text-align: right;}
     .bul{color:#00aaef;}
@@ -1340,6 +1371,7 @@ body .el-loading-spinner .el-loading-text{
     .defd p{margin-left: 38px;color: #555;}
     .defd p span{margin-right: 5px;font-size: 15px}
     .mt2{margin-top: 40px;}
+    .active_pay{background-color: #efefef !important;}
 
 }
 #orderList{
