--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -1483,6 +1483,7 @@ body .el-loading-spinner .el-loading-text{
     #payOrder{
         width: 100%;
         height: 100%;
+        
         .top{
             line-height: 160px;
             text-align: center;
@@ -1502,6 +1503,15 @@ body .el-loading-spinner .el-loading-text{
                 height: 314px;
                 margin: 0 auto;
                 background: url('http://test.artup.com/img/10phone_03.jpg') no-repeat right top;
+            }
+            .times{
+                text-align: center;
+                height: 4rem;
+                line-height: 4rem;
+                >span{
+                    color: #A00912;
+                }
+
             }
             .ewm{
                 height: 312px;
