--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -29,7 +29,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     .logo a{display: block;height: 100%;width: 100%;}
     .logo a img{height: 100%;}
     .nav{height: 100%;min-width:0px;overflow: hidden;padding-left: 43px}
-    .nav li {cursor: pointer;float: left;padding: 0 46px 0 46px;height: 26px;line-height: 26px;margin-top: 12px;border-left:1px solid #5b5b5b;}
+    .nav li {cursor: pointer;float: left;padding: 0 30px 0 30px;height: 26px;line-height: 26px;margin-top: 12px;border-left:1px solid #5b5b5b;}
     .nav li a{color:#efefef;font-size: 16px;}
     .nav li:hover >a{color:#5b5b5b;}
     .nav li a:active{position: relative;top: 1px;}
@@ -37,7 +37,23 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     .loding a{color: #EFEFEF;font-size: 16px}
     .loding a:hover{color: #5b5b5b;}
     .loding a:active{color: #5b5b5b;position: relative;top: 1px;}
-    .mineIM{width:270px;height: 50px;line-height: 50px}
+    .mineIM{
+        width:270px;height: 50px;line-height: 50px;
+           .user_login{
+               >li{
+                  width: 120px;float: left; color: #fff;cursor: pointer;
+                  text-align: center;
+                  >a{
+                      color: #fff;
+                  }
+               }
+           }
+        
+        }
+    
+    
+    
+    
     .touxiang{height: 30px;width: 30px;border-radius:50%;display: inline-block;margin-top: 10px;position: relative;}
     .touxiang b{z-index: 8;font-size: 12px;left: 24px;top: -4px;display: block;position: absolute;width: 16px;height: 16px;border-radius: 50%;background: #a00912;color: #fff;line-height: 16px;text-align: center;}
     .touxiang img{display: inline-block;height: 100%;width: 100%;border-radius: 50%;position: absolute;}
