--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -59,7 +59,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     .touxiang img{display: inline-block;height: 100%;width: 100%;border-radius: 50%;position: absolute;}
     .names{position: relative;display:inline-block;height: 30px;width: 50px;padding-right: 30px;margin-left: 30px;margin-top: 10px;color: #efefef;line-height: 30px;font-size: 16px;cursor: pointer;}
     .names >span{position: absolute;left: -14px;}
-    .names .user_list{display: none;width: 216px;height: auto;position: absolute;left: -80px;top: 40px;z-index: 8;background: #fff;border: 1px solid #eeeeee;border-bottom:none;border-radius:0 0 6px 6px;box-shadow: 1px 2px 5px #E0E0E0;}
+    .names .user_list{width: 216px;height: auto;position: absolute;left: -80px;top: 40px;z-index: 8;background: #fff;border: 1px solid #eeeeee;border-bottom:none;border-radius:0 0 6px 6px;box-shadow: 1px 2px 5px #E0E0E0;}
     .names .user_list li{height: 54px;line-height: 54px;border-bottom: 1px solid #eeeeee;text-align: center;}
     .names .user_list li a{font-size: 16px;color: #000;display: block;width: 100%;height: 100%;transition: text-indent 0.3s;}
     .names .user_list li a:hover{color: #a00912;text-indent: 10px;}
@@ -535,6 +535,29 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
         top: 0;
         left: 0;
         .upload_box{
+                position: relative;
+              .selectImg_10{
+                  position: absolute;
+                  bottom: 15px;
+                  right: 10px;
+                  border: 1px solid #a00912;
+                  width: 30px;
+                  height: 30px;   
+                  border-radius: 30px;
+                  line-height: 30px;
+                  text-align: center;
+                  cursor: pointer;
+                  transition: all .3s; 
+                  -webkit-user-select: none;-moz-user-select: none;
+                  &:hover{
+                     background: #a00912;
+                     color: #fff; 
+                  }
+                  &:active{
+                      background: #ccc;
+                      border: 1px solid #ccc;
+                  }
+              }  
             .textBox{
                 display: block;
                 width: 80%;
