--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -263,7 +263,90 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
     .pubilc_div{
 //          transition: all 1.3s;
             box-sizing: border-box;
-//          border: 1px solid #fff;
+                  .hcTemplatetext01{
+                      .title_pu{
+                              border: 1px solid #d2d2d2;
+                              box-sizing: border-box;overflow: hidden;
+                      }
+                      .mainTitle{
+                          width:140px;
+                          height: 20px;
+                          margin: 20px auto 10px;  line-height: 20px;     font-size: 12px;                     
+                      }
+                      .subtitle{
+                           width:140px;
+                           height: 12px;
+                           margin: 0px auto 30px;
+                           line-height: 12px;  
+                           font-size: 12px;
+                      }
+                      .box_text{
+                          width:140px;
+                          height: 106px;
+                          margin: 14px auto; font-size: 12px;
+                           line-height: 13px;
+                           overflow: hidden;
+                          .text_left{
+                              width: 66px;
+                              float: left;height: 106px;
+                          }
+                          .text_right{
+                              width: 66px;height: 106px;
+                              float: right
+                          }
+                      }
+                  }
+                  .hcTemplatetext02{
+
+                      .title_pu{
+                              border: 1px solid #d2d2d2;
+                              box-sizing: border-box;overflow: hidden;
+                      }
+                      .mainTitle{
+                          width:100px;
+                          height: 20px;
+                          margin: 20px 0px 10px 50px;
+                          line-height: 20px;  font-size: 12px;
+                      }
+                      .subtitle{
+                           width:100px;
+                           height: 12px;
+                           margin: 0px 0px 30px 50px;line-height: 12px;    font-size: 12px;
+                      }
+                      .box_text{
+                          width:100px;
+                          height: 106px;
+                           margin: 14px 0px 14px 50px; font-size: 12px;
+                           line-height: 12px; overflow: hidden;
+                      }
+                  }
+                  .hcTemplatetext03{
+
+                     .title_pu{
+                              border: 1px solid #d2d2d2;
+                              box-sizing: border-box;overflow: hidden;
+                      }
+                      .mainTitle{
+                          width:140px;
+                          height: 20px;
+                          margin: 20px auto 10px;   line-height: 20px;                       
+                      }
+//                    .subtitle{
+//                         width:100px;
+//                         height: 12px;
+//                         margin: 0px 0px 30px 50px;
+//                    }
+                      .box_text{
+                          width:140px;
+                          height: 40px;
+                           margin:30px auto 102px;
+                          line-height: 13px;font-size: 12px; overflow: hidden;
+                      }
+                  }  
+                    
+                    
+                    
+                    
                    >.time_pu{
                     position: relative;
                     .bbsClass{
