修改目录结构

--- a/src/assets/less/复制 style.less
+++ b/src/assets/less/复制 style.less
@@ -60,7 +60,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 #bbsEdit{
     width: 100%;
     height: 100%;
-    overflow: hidden;    
+    overflow: hidden;
     //拖拽的板式kuang
     #div_drap{
         font-size: 14px;color: #333;background: #fff;
@@ -71,7 +71,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
         height: 12.8125rem;
         box-shadow: 0 10px 10px -6px #777;
         cursor:move;
-        
+
        .titleBox{width: 100%;height: 30px;line-height: 30px;text-align: center;border-bottom: 1px solid #d7d7d7;}
        .titleClose{
            >i{
@@ -79,13 +79,13 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
            }
            &:hover{
                cursor: pointer;
-               
+
            }
            &:active{
                top: 1px;color: #a00912;
            }
            position: absolute;right: 0;top: 0;width: 30px;height: 30px;}
-           
+
            .checkBS_b{
                width: 100%;
                height: 369px;
@@ -105,15 +105,15 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                           cursor:default;
                           display: block;
 //                        width: 80%;
-                          .pubCenter;  
+                          .pubCenter;
                       }
                 }
-               
+
               .boder_actiev{
                  border: 1px solid #a00912 !important;
               }
            }
-    } 
+    }
 }
 .comtent_chanpin{
     width:100%;
@@ -161,7 +161,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         top: 1px;
                     }
                 }
-                
+
             }
         }
         .title{
@@ -231,10 +231,10 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 //              .div_page{
 //                  width:100%;position: relative;height: 100%;
 //                  background-color: #d2d2d2 ;
-//                  
+//
 //              }
 //          }
-//          
+//
 //      }
 //  }
     .pubilc_div{
@@ -838,7 +838,7 @@ body .el-loading-spinner .el-loading-text{
     .main .cont p{color:#333;font-family:"微软雅黑";min-width: 206px;text-align: center;overflow: hidden;}
     .main .cont .intro{font-size: 18px;}
     .main .cont .tit{font-size: 64px;margin-top: 25px;font-weight: 100;}
-    .main .cont_jiashu{background: url(../img/jiashu_02.jpg) no-repeat center center;}
+    .main .cont_jiashu{background: url(../../page/welcome/img/jiashu_02.jpg) no-repeat center center;}
     .main .cont_hc{background: url(../img/index_03.jpg) no-repeat center center;}
     .main .cont_cth{background: url(../img/index_04.jpg) no-repeat center center;}
     .main .cont_kh{background: url(../img/index_05.jpg) no-repeat center center;}
