--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -48,12 +48,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                   }
                }
            }
-        
+
         }
-    
-    
-    
-    
+
+
+
+
     .touxiang{height: 30px;width: 30px;border-radius:50%;display: inline-block;margin-top: 10px;position: relative;}
     .touxiang b{z-index: 8;font-size: 12px;left: 24px;top: -4px;display: block;position: absolute;width: 16px;height: 16px;border-radius: 50%;background: #a00912;color: #fff;line-height: 16px;text-align: center;}
     .touxiang img{display: inline-block;height: 100%;width: 100%;border-radius: 50%;position: absolute;}
@@ -76,7 +76,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 #bbsEdit{
     width: 100%;
     height: 100%;
-    overflow: hidden;    
+    overflow: hidden;
     //拖拽的板式kuang
     #div_drap{
         font-size: 14px;color: #333;background: #fff;
@@ -87,7 +87,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
         height: 12.8125rem;
         box-shadow: 0 10px 10px -6px #777;
         cursor:move;
-        
+
        .titleBox{width: 100%;height: 30px;line-height: 30px;text-align: center;border-bottom: 1px solid #d7d7d7;}
        .titleClose{
            >i{
@@ -95,13 +95,13 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
            }
            &:hover{
                cursor: pointer;
-               
+
            }
            &:active{
                top: 1px;color: #a00912;
            }
            position: absolute;right: 0;top: 0;width: 30px;height: 30px;}
-           
+
            .checkBS_b{
                width: 100%;
                height: 369px;
@@ -121,15 +121,15 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                           cursor:default;
                           display: block;
 //                        width: 80%;
-                          .pubCenter;  
+                          .pubCenter;
                       }
                 }
-               
+
               .boder_actiev{
                  border: 1px solid #a00912 !important;
               }
            }
-    } 
+    }
 }
 .comtent_chanpin{
     width:100%;
@@ -181,7 +181,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                         top: 1px;
                     }
                 }
-                
+
             }
         }
         .title{
@@ -235,7 +235,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
 
     //模版样式
     .active_line{border: 1px solid #a00912 !important;height: 242px !important;overflow: hidden;}
-    
+
         .hengban_bbs{
         width: 100% !important;
         height: 100%;
@@ -244,7 +244,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
             height: 100% !important;
             .pageleft{
                 text-align: left !important;
-                text-indent: 28px; 
+                text-indent: 28px;
              }
             .hengbanText{
                margin-left: 20px !important;
@@ -256,14 +256,14 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 .div_page{
                     width:100%;position: relative;height: 100%;
                     background-color: #d2d2d2 ;
-                    
+
                 }
-                
+
             }
-            
+
         }
     }
-    
+
     .pubilc_div{
 //          transition: all 1.3s;
             box-sizing: border-box;
@@ -275,13 +275,13 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                       .mainTitle{
                           width:140px;
                           height: 20px;
-                          margin: 20px auto 10px;  line-height: 20px;     font-size: 12px;                     
+                          margin: 20px auto 10px;  line-height: 20px;     font-size: 12px;
                       }
                       .subtitle{
                            width:140px;
                            height: 12px;
                            margin: 0px auto 30px;
-                           line-height: 12px;  
+                           line-height: 12px;
                            font-size: 12px;
                       }
                       .box_text{
@@ -333,7 +333,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                       .mainTitle{
                           width:140px;
                           height: 20px;
-                          margin: 20px auto 10px;   line-height: 20px;                       
+                          margin: 20px auto 10px;   line-height: 20px;
                       }
 //                    .subtitle{
 //                         width:100px;
@@ -346,11 +346,11 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                            margin:30px auto 102px;
                           line-height: 13px;font-size: 12px; overflow: hidden;
                       }
-                  }  
-                    
-                    
-                    
-                    
+                  }
+
+
+
+
                    >.time_pu{
                     position: relative;
                     .bbsClass{
@@ -535,10 +535,10 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 font-size: 14px;  color: #6b6b6b;
                 cursor: pointer;
                 box-sizing: border-box;
-                transition:all .7s; 
+                transition:all .7s;
                 &:hover{
                    border: 1px solid #a00912;
-                   color: #a00912; 
+                   color: #a00912;
                 }
                  &:active{
                      position: relative;
@@ -629,22 +629,22 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                   right: 10px;
                   border: 1px solid #a00912;
                   width: 30px;
-                  height: 30px;   
+                  height: 30px;
                   border-radius: 30px;
                   line-height: 30px;
                   text-align: center;
                   cursor: pointer;
-                  transition: all .3s; 
+                  transition: all .3s;
                   -webkit-user-select: none;-moz-user-select: none;
                   &:hover{
                      background: #a00912;
-                     color: #fff; 
+                     color: #fff;
                   }
                   &:active{
                       background: #ccc;
                       border: 1px solid #ccc;
                   }
-              }  
+              }
             .textBox{
                 display: block;
                 width: 80%;
@@ -981,7 +981,7 @@ body .el-loading-spinner .el-loading-text{
     .main .cont p{color:#333;font-family:"微软雅黑";min-width: 206px;text-align: center;overflow: hidden;}
     .main .cont .intro{font-size: 18px;}
     .main .cont .tit{font-size: 64px;margin-top: 25px;font-weight: 100;}
-    .main .cont_jiashu{background: url(../img/jiashu_02.jpg) no-repeat center center;}
+    .main .cont_jiashu{background: url(../../page/welcome/img/jiashu_02.jpg) no-repeat center center;}
     .main .cont_hc{background: url(../img/index_03.jpg) no-repeat center center;}
     .main .cont_cth{background: url(../img/index_04.jpg) no-repeat center center;}
     .main .cont_kh{background: url(../img/index_05.jpg) no-repeat center center;}
@@ -1117,12 +1117,12 @@ body .el-loading-spinner .el-loading-text{
     .cart_null .goIndex:hover{
         color: #fff;
         background: #444;
-        
+
     }
     .cart_null .goIndex:active{
         position: relative;
         top: 1px;
-        
+
     }
     .p_cat > .pay_cat {
       width: 1116px;
@@ -1412,7 +1412,7 @@ body .el-loading-spinner .el-loading-text{
     .ord1m_2 span{display: block;float: left;}
     .ord1m_3{font-size: 16px;margin-top: 20px;}
     .ord1m_3 select{height: 36px;width: 125px;border:1px solid #999;color: #A00912;font-size: 16px;outline: none;border-radius: 4px;padding-left: 20px;font-weight: 900;}
-    
+
     /*ssssssssssssssssssss*/
     .order2{width: 1200px;clear: both;}
     .ord2-tit{height: 48px;line-height: 48px;font-size: 16px;margin-top: 25px;border-bottom: 1px solid #999;}
@@ -1524,7 +1524,7 @@ body .el-loading-spinner .el-loading-text{
             body .lineR2{
                 margin-top: 0;
             }
-            .lineRs ul{   
+            .lineRs ul{
                 height: 55px;
                 font-size: 16px;
                 width: 898px;
@@ -1573,7 +1573,7 @@ body .el-loading-spinner .el-loading-text{
                 .lect_cer{font-size: 14px;color: #6F6F6F;margin-top: 12px;}
                 .shr{font-size: 16px;font-weight: 900;line-height: 80px;}
                 .jine{line-height: 25px;}
-                
+
                 .mt1{margin-top: 15px;}
                 .jine01{font-size: 16px;color:#000 ;}
                 .jine02{font-size: 14px;color: #a00912;}
@@ -1601,15 +1601,15 @@ body .el-loading-spinner .el-loading-text{
                 }
             }
          }
-            
+
      }
-    
+
 }
 #htm{
     #payOrder{
         width: 100%;
         height: 100%;
-        
+
         .top{
             line-height: 160px;
             text-align: center;
@@ -1651,7 +1651,7 @@ body .el-loading-spinner .el-loading-text{
                     line-height: 60px;
                     text-align: center;
                     font-size: 24px;
-    
+
                 }
                 .tm{
                     bottom: 15px;
@@ -1662,7 +1662,7 @@ body .el-loading-spinner .el-loading-text{
                      >span{
                        color: #A00912;
                     }
-                    
+
                 }
             }
         }
@@ -1670,12 +1670,12 @@ body .el-loading-spinner .el-loading-text{
     #payCancel{
         width: 100%;
         height: 600px;
-        
+
        .topBox{
            width: 100%;
            min-height: 380px;
            border-bottom: 1px solid #D2D2D2;
-           
+
            .msg{
                width: 1200px;
                height: 100%;
@@ -1722,7 +1722,7 @@ body .el-loading-spinner .el-loading-text{
                     li:nth-child(2){
                       color: #3a3a3a;
                     }
-                       
+
                }
            }
        }
@@ -1768,7 +1768,7 @@ body .el-loading-spinner .el-loading-text{
                    font-size: 20px;
                }
            }
-           
+
            .btnBox{
                width: 330px;
                height: 36px;
