--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -253,14 +253,14 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 width: 280px;
                 height:160px;
                 margin: 18px auto 18px;
-                .div_page{
-                    width:100%;position: relative;height: 100%;
-                    background-color: #d2d2d2 ;
+                .div_page {
+                  width: 100%;
+                  position: relative;
+                  height: 100%;
+                  background-color: #d2d2d2;
 
                 }
-<<<<<<< HEAD
-                
-            }  
+            }
         }
         //横版画册不同板式样式
         .hcTemplate225_355{
@@ -271,7 +271,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 .div_page{
                     width:100%;position: relative;height: 100%;
                     background-color: #d2d2d2 ;
-                    
+
                 }
             }
         }
@@ -284,7 +284,7 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 .div_page{
                     width:100%;position: relative;height: 100%;
                     background-color: #d2d2d2 ;
-                    
+
                 }
             }
         }
@@ -297,17 +297,11 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                 .div_page{
                     width:100%;position: relative;height: 100%;
                     background-color: #d2d2d2 ;
-                    
+
                 }
             }
         }
-      
-=======
 
-            }
-
-        }
->>>>>>> a465e349cbcff72306fc6cfbe29add94414986e9
     }
 
     .pubilc_div{
@@ -560,12 +554,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                                 width: 100%;
                                 height: 80px !important;
                                 background-color: #d2d2d2;
-    
+
                             }
                             .div_page:first-child{
                                 margin-bottom: 14px;
                             }
-                       } 
+                       }
                        .template255_255{
                             width: 128px;
                             height: 128px;
@@ -595,12 +589,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                                 width: 100%;
                                 height: 80px !important;
                                 background-color: #d2d2d2;
-    
+
                             }
                             .div_page:first-child{
                                 margin-bottom: 14px;
                             }
-                       } 
+                       }
                        .template220_220{
                             width: 128px;
                             height: 128px;
@@ -635,12 +629,12 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                                 width: 100%;
                                 height: 91.43px !important;
                                 background-color: #d2d2d2;
-    
+
                             }
                             .div_page:first-child{
                                 margin-bottom: 4px;
                             }
-                       } 
+                       }
                        .template330_330{
                             width: 128px;
                             height: 128px;
@@ -653,9 +647,9 @@ html,body{width:100%;min-height: 100%;font-family: "微软雅黑";font-weight: 5
                             margin: 40px auto 31.7px;
                             background-color: #d2d2d2;
                        }
-                  }   
-               
-        
+                  }
+
+
         }
 
 
